// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Integral Input Forms 1`] = `
Array [
  0.7,
  0,
  0.09787,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 2`] = `
Array [
  0.42,
  0,
  0.06294,
  0,
  0.42,
  -0.11368,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 3`] = `
Array [
  0.28,
  0,
  0.00694,
  0,
  0.28,
  0.10654,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Input Forms 4`] = `
Array [
  0.09787,
  0,
  0,
  0,
  0.2009,
  -0.0756,
  0,
  0,
  1,
]
`;
